--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "nodemon": "^1.19.3"
   },
   "dependencies": {
+    "chalk": "^2.4.2",
+    "request": "^2.88.0",
     "yargs": "^14.0.0"
   }
 }
